# Pyperiscope

./: README.md  index.html  pyproject.toml  screenshot.js  server.py  tools.ipynb
docs/: layer1.md  layer2.md  layer3.md  layer4.md  layer5.md
prototype/: AL.ipynb  PyPeriscope_FactoryV2.ipynb  PyPeriscoperInteractive.ipynb  binoculars.ipynb  dav_sub_runner.ipynb  dav_subtitle2.ipynb  pilot.ipynb  presitanceTest.ipynb  readme_version.ipynb  scope.ipynb  scraper.ipynb  server.ipynb  testXXX.ipynb
prototype/odoo/: Untitled.ipynb  runner.ipynb
prototype/server/: api_server.ipynb  title.html
prototype/server/imdb-collection-draft/: 1-startup-.ipynb  1-startup-sub1.ipynb  E-send_4_help.ipynb  Untitled.ipynb  Untitled1.ipynb  _factory.ipynb  _runner.ipynb  cleanup.ipynb  film_database-Copy1.h5  film_details_update.ipynb  get_film_details.ipynb  get_pages.ipynb  get_producer_contacts.ipynb  get_single.ipynb  run.ipynb  update_films.ipynb
prototype/server/odoo-onshape-draft/: 1-startup-.ipynb  3-close_tabs.ipynb  E-send_4_help.ipynb  _factory.ipynb  _runner.ipynb  run.ipynb
prototype/template/: automation.ipynb  factory.ipynb  runner.ipynb
src/pyperiscope/: __init__.py  layer1.py  layer2.py  layer3.py  layer4.py  layer5.py  layer6.py
src/pyperiscope/binoculars/: __init__.py  layer1.py  layer2.py  layer3.py  layer4.py  layer5.py
src/pyperiscope/pilot/: __init__.py  layer1.py  layer2.py  layer3.py
src/pyperiscope/scope/: __init__.py  layer1.py  layer3.py  layer4.py  layer6.py
src/pyperiscope/scraper/: __init__.py  layer1.py  layer2.py  layer3.py
tests/: Untitled.ipynb  conftest.py  notebook_runner.py  prototype.ipynb  test - calc win.ipynb  test - create step.ipynb  test_calc_win.py  test_scope_creation.py
